# Crypto-Tracker

./: CMakeLists.txt  Dockerfile  README.md
qml/: ListEntry.qml  main.qml  qml.qrc
src/: CMakeLists.txt  CryptoApiManager.cpp  CryptoApiManager.h  DataEntryModel.cpp  DataEntryModel.h  main.cpp
tools/: build.sh  run-docker.sh
